--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.10.1",
+    "react-animate-height": "^2.0.15",
     "react-dom": "^16.10.1",
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.1.1",
