--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.13.0",
     "react": "^16.10.1",
     "react-animate-height": "^2.0.15",
     "react-dom": "^16.10.1",
